--- a/src/backend/utils/resgroup/test/Makefile
+++ b/src/backend/utils/resgroup/test/Makefile
@@ -5,3 +5,7 @@ include $(top_builddir)/src/Makefile.global
 TARGETS=resgroup
 
 include $(top_builddir)/src/backend/mock.mk
+
+resgroup.t: \
+	$(MOCK_DIR)/backend/commands/resgroupcmds_mock.o \
+	$(MOCK_DIR)/backend/utils/init/miscinit_mock.o
